# realty-research-ai

./: .gitignore  .pdm-python  Bot.py  BotMap.py  LICENSE  README.md  pyproject.toml
app/backend/: maps.py  scrape_cvent.py  search.py
experiments/: research-copilot.ipynb
